Fix scaling on mobile via meta viewport.

--- a/public_static/css/core_style.css
+++ b/public_static/css/core_style.css
@@ -168,3 +168,7 @@ header > #navbar > .end {
 #homelink:hover {
 	text-decoration: underline;
 }
+
+#content_main {
+    overflow-y: auto;
+}
